--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@parcel/watcher": "^2.5.1",
     "@tailwindcss/postcss": "^4.1.6",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "concurrently": "^9.1.2",
     "eslint": "^9.26.0",
     "eslint-config-next": "^15.4.0-canary.29",
-    "eslint-plugin-perfectionist": "^4.12.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
