Squash merge CORE-3751 into main

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_GQL_API="https://x.dtc.centraapisqa.com/dtc-api"
 GQL_AUTHORIZATION="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
 
 CENTRA_WEBHOOK_SECRET="XXXXXXXXXXXXX+XXXXXXXXXXXXXXXXXX"
+SESSION_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
