--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "jose": "^6.0.11",
     "next": "^15.4.0-canary.29",
     "nuqs": "^2.4.3",
     "react": "^19.1.0",
