--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.90.2",
     "async-mutex": "^0.5.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
