Squash merge nextjs-update into main

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NO_SESSION_GQL_API="https://x.dtc.centraapisqa.com/dtc-api-no-session"
+NO_SESSION_GQL_API="https://x.dtc.centraapisqa.com/api-no-session"
 NO_SESSION_GQL_AUTHORIZATION="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
 NO_SESSION_GQL_SHARED_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 
-NEXT_PUBLIC_GQL_API="https://x.dtc.centraapisqa.com/dtc-api"
+NEXT_PUBLIC_GQL_API="https://x.dtc.centraapisqa.com/api-session"
 GQL_AUTHORIZATION="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
 
 CENTRA_WEBHOOK_SECRET="XXXXXXXXXXXXX+XXXXXXXXXXXXXXXXXX"
