--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   },
   "private": true,
   "scripts": {
-    "dev": "concurrently -c green,magenta -n gql-gen,next npm:gql-gen:watch \"next dev --turbopack\"",
-    "dev-ssl": "concurrently -c green,magenta -n gql-gen,next npm:gql-gen:watch \"next dev --turbopack --experimental-https\"",
+    "dev": "concurrently -c green,magenta -n gql-gen,next npm:gql-gen:watch \"next dev\"",
+    "dev-ssl": "concurrently -c green,magenta -n gql-gen,next npm:gql-gen:watch \"next dev --experimental-https\"",
     "build": "npm run gql-gen && next build",
     "start": "next start",
     "lint": "eslint .",
@@ -18,43 +18,47 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
-    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query": "^5.90.7",
     "async-mutex": "^0.5.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
-    "i18next": "^25.5.3",
+    "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jose": "^6.1.0",
-    "next": "^15.5.4",
-    "nuqs": "^2.7.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-i18next": "^16.0.0",
+    "next": "16.0.1",
+    "nuqs": "^2.7.2",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-i18next": "^16.2.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^6.0.0",
-    "@graphql-codegen/client-preset": "^5.1.0",
+    "@graphql-codegen/cli": "^6.0.1",
+    "@graphql-codegen/client-preset": "^5.1.1",
     "@graphql-codegen/schema-ast": "^5.0.0",
     "@parcel/watcher": "^2.5.1",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.18.8",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@types/node": "^22.19.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "concurrently": "^9.2.1",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "schema-dts": "^1.1.5",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript-eslint": "^8.46.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
