--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ GQL_AUTHORIZATION="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
 
 CENTRA_WEBHOOK_SECRET="XXXXXXXXXXXXX+XXXXXXXXXXXXXXXXXX"
 SESSION_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+
+# Adyen express checkout
+NEXT_PUBLIC_ADYEN_EXPRESS_CHECKOUT_ENABLED="true"
+GQL_SHARED_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
